PR17122, OSX 10.9 build failure

sbrk hasn't been used in binutils/ or ld/ for quite some time (so the
PR was fixed a while ago).  Tidy up configury.

	PR 17122
binutils/
	* configure.ac: Don't check for sbrk.
	* sysdep.h (sbrk): Don't supply fallback declaration.
	* config.in: Regenerate.
	* configure: Regenerate.
ld/
	* configure.ac: Don't check for sbrk.
	* config.in: Regenerate.
	* configure: Regenerate.